contact ve aboutus siteleri eklendi. Yapısal hatalar giderildi

--- a/aboutus.html
+++ b/aboutus.html
@@ -35,8 +35,7 @@
                         <div class="navbar-nav ms-auto"><!-- ms-auto ile navbar kısmı sağa gitti ama nasıl? -->
                             <a class="nav-link  text-light text-center" aria-current="page" href="index.html">Home</a>
                             <a class="nav-link active text-light text-center" href="aboutus.html">About us</a>
-                            <a class="nav-link text-light text-center" href="vision.html">vision</a>
-                            <a class="nav-link disabled text-light text-center" href="contact.html"
+                            <a class="nav-link  text-light text-center" href="contact.html"
                                 aria-disabled="true">Contact</a>
                         </div>
                     </div>
@@ -49,93 +48,94 @@
 
     <div class="container-fluid ">
         <div class="row">
-            <div class="col-sm-12 px-0">
-            <img class="w-100 border-bottom" src="images/989600.jpg" alt="">
-        </div>
+            <img class="px-0 d-block w-100  " src="images/blake-wisz-TcgASSD5G04-unsplash.jpg"">
         </div>
     </div>
 
-    <div class="container-fluid">
-        <div class="row bg-dark border-top border-bottom ">
-            <div class="col-sm-8 offset-sm-2">
-                <div class="p-5  bg-body-tertiary rounded-3 jumb my-5">
-                    <div class="container-fluid  text-center ">
-                        <h1 class="display-2 fw-bold pb-4 ">About Us</h1>
-                        <p class=" fs-4 ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore vitae nulla
-                            repellat fugit consectetur deleniti, at accusantium! Aspernatur, praesentium consequatur.
-                        </p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto a totam ab numquam dolores
-                            quaerat sint neque fuga, eligendi animi.</p>
-                        <p>Corrupti, a? Unde, dolorem, rerum, dicta mollitia in vitae doloribus dolore quis officiis quo
-                            veritatis voluptates perferendis perspiciatis iste quae.</p>
-                        <button class="btn btn-primary btn-lg text" type="button">Bize ulaşın</button>
-                    </div>
+
+    <div class=" container-fluid ">
+        <div class=" row bg-dark border-top border-bottom ">
+            <div class=" col-sm-8 offset-sm-2">
+            <div class="p-5  bg-body-tertiary rounded-3 jumb my-5">
+                <div class="container-fluid  text-center ">
+                    <h1 class="display-2 fw-bold pb-4 ">Hakkımızda</h1>
+                    <p class=" fs-4 ">Enba Camping, doğayla iç içe unutulmaz anılar biriktirmeniz için tasarlanmış
+                        benzersiz bir kamp deneyimi sunan bir destinasyondur. Misafirlerimizi şehir stresinden
+                        uzaklaştırmak, huzur dolu bir atmosferde dinlendirici bir tatil sunmak amacıyla doğanın
+                        kucağında konumlanmıştır.
+                    </p>
+                    <p>Biz, doğayla uyum içinde olan konseptimizle, ziyaretçilerimize şehir yaşamının karmaşasından
+                        kaçış fırsatı sunuyoruz. Enba Camping, yeşillikler içinde, gölet manzaralı çadır
+                        alanlarından orman içi karavan parkına kadar geniş bir konaklama yelpazesi sunarak doğa
+                        severlerin beklentilerini karşılamayı hedefliyor.</p>
+                    <p>Enba Camping, doğa ile baş başa, huzurlu ve keyifli bir tatil için ideal bir adres. Siz de
+                        Enba Camping'i ziyaret edin, doğanın güzellikleri içinde unutulmaz anılar biriktirin!
+                        🏕️🌿🌟</p>
+                    <button class="btn btn-dark btn-lg text" type="button">Bize ulaşın</button>
                 </div>
             </div>
         </div>
+    </div>
 
-        <!-- VİSİON -->
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-8 offset-sm-2 mt-5 mb-2">
-                    <h2>Our Vision</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus, doloribus dolorem? Vero
-                        consequuntur quisquam quidem, voluptate soluta, consectetur consequatur eos officiis
-                        exercitationem, voluptatum dolorum quo.</p>
-                    <p>Mollitia, repudiandae error nihil neque, laboriosam corporis voluptate deleniti assumenda totam
-                        natus quaerat ratione porro debitis. Accusamus ex perferendis, distinctio quidem mollitia
-                        blanditiis? Unde, cum!</p>
-                    <p>Necessitatibus nihil dolores ipsum ullam perferendis reiciendis nisi suscipit deserunt commodi
-                        dignissimos totam, eveniet veritatis incidunt cum neque sequi esse, quis iste modi vero
-                        repudiandae!</p>
-                    <hr>
-                    <h2>Our Mission</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus unde praesentium
-                        aspernatur ab ex ea obcaecati hic, accusantium neque nihil.</p>
-                    <p>Totam dignissimos maiores exercitationem voluptates possimus itaque tenetur aperiam, saepe velit
-                        repellat mollitia! Quia repellat hic inventore pariatur aspernatur doloribus?</p>
-                    <ul>
-                        <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Mollitia, tenetur!</li>
-                        <li>Lorem ipsum dolor sit.</li>
-                        <li>Laboriosam necessitatibus quas earum?</li>
-                        <li>Excepturi magnam neque eius.</li>
-                    </ul>
+    <!-- VİSİON -->
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-8 offset-sm-2 mt-5 mb-2">
+                <h2>Vizyonumuz</h2>
+                <p>
+                    Enba Camping'in vizyonu, doğayla uyum içinde, sürdürülebilir bir kamp deneyimi sunarak sektörde
+                    lider bir konum elde etmektir. Misafir memnuniyetini ön planda tutarak, doğayı koruyan ve
+                    misafirlerimizi doğa ile buluşturan bir tesis olmayı hedefliyoruz. Yaratıcı ve etkileyici bir
+                    konsept ile misafirlerimize kendilerini evlerinde hissettirecek bir atmosfer sağlamayı ve doğa
+                    tutkunları için vazgeçilmez bir destinasyon olmayı amaçlıyoruz. Enba Camping, her ziyaretçisinin
+                    doğa ile bütünleştiği, dinlendiği ve keyif aldığı bir mekan olarak anılmayı amaçlamaktadır.
+                </p>
+                <hr>
+                <h2>Misyonumuz</h2>
+                <p>Enba Camping olarak misyonumuz, misafirlerimize unutulmaz bir doğa deneyimi sunmak, şehir
+                    hayatının karmaşasından uzaklaştırmak ve yeniden bağlantı kurmalarını sağlamaktır. Doğanın
+                    huzurlu atmosferinde, sakin bir kaçış sunarak, konuklarımıza modern konforun ve doğal
+                    güzelliklerin bir arada olduğu bir ortamda konaklama fırsatı sunuyoruz. Temiz, düzenli ve çevre
+                    dostu bir kamp alanı ile birlikte, her misafirimizin beklentilerini aşan bir hizmet sunmayı
+                    amaçlıyoruz.</p>
 
-                </div>
-                <div class="col-sm-8 offset-sm-2"></div>
+
+            </div>
+            <div class="col-sm-8 offset-sm-2"></div>
+        </div>
+    </div>
+    <!-- VİSİON END -->
+
+
+
+
+    <!-- PROJECT -->
+    <div class="container">
+        <div class="row my-4">
+            <div class="col-sm-12">
+                <h1 class="d-flex justify-content-center mb-4">Galeri</h1>
+                <hr>
+            </div>
+            <div class="col-sm col-6 mb-1"><img src="images/galeri/hichem-meghachou-7I-Rj_E9ihI-unsplash.jpg" alt=""
+                    class="w-100 img-thumbnail">
+            </div>
+            <div class="col-sm col-6 mb-1"><img src="images/galeri/jimmy-conover-J_XuXX9m0KM-unsplash.jpg" alt=""
+                    class="w-100 img-thumbnail">
+            </div>
+            <div class="col-sm col-6 mb-1"><img src="images/galeri/josh-campbell-UbbjVyibFuc-unsplash.jpg" alt=""
+                    class="w-100 img-thumbnail">
+            </div>
+            <div class="col-sm col-6 mb-1"><img src="images/galeri/shelby-cohron-ESNV6KmLJMg-unsplash.jpg" alt=""
+                    class="w-100 img-thumbnail">
+            </div>
+            <div class="col-sm col-6 mb-1"><img src="images/galeri/tegan-mierle-fDostElVhN8-unsplash.jpg" alt=""
+                    class="w-100 img-thumbnail">
+            </div>
+            <div class="col-sm col-6 mb-1"><img src="images/galeri/toa-heftiba-x9I-6yoXrXE-unsplash.jpg" alt=""
+                    class="w-100 img-thumbnail">
             </div>
         </div>
-        <!-- VİSİON END -->
-
-
-
-
-        <!-- PROJECT -->
-        <div class="container">
-            <div class="row my-4">
-                <div class="col-sm-12">
-                    <h1 class="d-flex justify-content-center mb-4">Galeri</h1>
-                </div>
-                <div class="col-sm col-6 mb-1"><img src="https://picsum.photos/id/37/100/80" alt=""
-                        class="w-100 img-thumbnail">
-                </div>
-                <div class="col-sm col-6 mb-1"><img src="https://picsum.photos/id/27/100/80" alt=""
-                        class="w-100 img-thumbnail">
-                </div>
-                <div class="col-sm col-6 mb-1"><img src="https://picsum.photos/id/297/100/80" alt=""
-                        class="w-100 img-thumbnail">
-                </div>
-                <div class="col-sm col-6 mb-1"><img src="https://picsum.photos/id/247/100/80" alt=""
-                        class="w-100 img-thumbnail">
-                </div>
-                <div class="col-sm col-6 mb-1"><img src="https://picsum.photos/id/7/100/80" alt=""
-                        class="w-100 img-thumbnail">
-                </div>
-                <div class="col-sm col-6 mb-1"><img src="https://picsum.photos/id/9/100/80" alt=""
-                        class="w-100 img-thumbnail">
-                </div>
-            </div>
-        </div>
+    </div>
     </div>
 
     <!-- .col-sm*8>img.w-100[src="https://picsum.photos/id/2$/100/80"] -->
@@ -143,34 +143,20 @@
     <!-- PROJECT END -->
 
     <!-- FOOTER -->
-    <div class="bg-dark text-light"> <!-- YAZILAR BEYAZ OLMUYOR -->
+    <div class="bg-dark text-light">
         <div class="container">
             <footer class="pt-5 mt-5 ">
                 <div class="row ">
                     <div class="col-6 col-md-2 mb-3">
                         <h5>Section</h5>
                         <ul class="nav flex-column ">
-                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Home</a></li>
-                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Features</a>
+                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-light">Home</a></li>
+                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-light">Features</a>
                             </li>
-                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Pricing</a>
+                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-light">Pricing</a>
                             </li>
-                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">FAQs</a></li>
-                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">About</a>
-                            </li>
-                        </ul>
-                    </div>
-
-                    <div class="col-6 col-md-2 mb-3">
-                        <h5>Section</h5>
-                        <ul class="nav flex-column">
-                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Home</a></li>
-                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Features</a>
-                            </li>
-                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Pricing</a>
-                            </li>
-                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">FAQs</a></li>
-                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">About</a>
+                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-light">FAQs</a></li>
+                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-light">About</a>
                             </li>
                         </ul>
                     </div>
@@ -178,21 +164,45 @@
                     <div class="col-6 col-md-2 mb-3">
                         <h5>Section</h5>
                         <ul class="nav flex-column">
-                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Home</a></li>
-                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Features</a>
+                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-light">Home</a></li>
+                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-light">Features</a>
                             </li>
-                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Pricing</a>
+                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-light">Pricing</a>
                             </li>
-                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">FAQs</a></li>
-                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">About</a>
+                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-light">FAQs</a></li>
+                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-light">About</a>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <div class="col-6 col-md-2 mb-3">
+                        <h5>Section</h5>
+                        <ul class="nav flex-column">
+                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-light">Home</a></li>
+                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-light">Features</a>
+                            </li>
+                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-light">Pricing</a>
+                            </li>
+                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-light">FAQs</a></li>
+                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-light">About</a>
                             </li>
                         </ul>
                     </div>
 
                     <div class="col-md-5 offset-md-1 mb-3">
                         <form>
-                            <h5>Subscribe to our newsletter</h5>
-                            <p>Monthly digest of what's new and exciting from us.</p>
+                            <h4>
+                                Abone Ol ve Doğanın Güzelliklerini Kaçırma!</h4>
+                            <p class="fs-6">Doğanın kucaklayıcı atmosferine adım atmak, huzurla dolu anlar yaşamak ve
+                                Enba Camping'in sunduğu özel fırsatları kaçırmamak için hemen abone ol! Sitemize abone
+                                olarak, doğanın gizemli güzellikleri, özel indirimler ve etkinliklerden ilk sen haberdar
+                                olacaksın.</p>
+                            <p class="fs-6">
+                                Unutulmaz anılar biriktirmek ve doğanın kollarında huzurlu bir deneyim yaşamak için
+                                abone ol, Enba Camping'in eşsiz dünyasına adımını at! 🏕️✨
+                            </p>
+
+
                             <div class="d-flex flex-column flex-sm-row w-100 gap-2">
                                 <label for="newsletter1" class="visually-hidden">Email address</label>
                                 <input id="newsletter1" type="text" class="form-control" placeholder="Email address">
@@ -216,11 +226,8 @@
                                 </svg></a></li>
                     </ul>
                 </div>
-            </footer>
+                <!-- FOOTER END -->
         </div>
-    </div>
-    <!-- FOOTER END -->
-    </div>
 
 
 </body>
