--- a/aboutus.html
+++ b/aboutus.html
@@ -46,96 +46,97 @@
 
     <!-- NAV END -->
 
+
+    <!-- CAROUSEL -->
+
     <div class="container-fluid ">
         <div class="row">
-            <img class="px-0 d-block w-100  " src="images/blake-wisz-TcgASSD5G04-unsplash.jpg"">
+            <img class="px-0 d-block w-100  " src="images/blake-wisz-TcgASSD5G04-unsplash.jpg">
         </div>
     </div>
 
+    <!-- CAROUSEL END -->
 
     <div class=" container-fluid ">
         <div class=" row bg-dark border-top border-bottom ">
             <div class=" col-sm-8 offset-sm-2">
-            <div class="p-5  bg-body-tertiary rounded-3 jumb my-5">
-                <div class="container-fluid  text-center ">
-                    <h1 class="display-2 fw-bold pb-4 ">Hakkımızda</h1>
-                    <p class=" fs-4 ">Enba Camping, doğayla iç içe unutulmaz anılar biriktirmeniz için tasarlanmış
-                        benzersiz bir kamp deneyimi sunan bir destinasyondur. Misafirlerimizi şehir stresinden
-                        uzaklaştırmak, huzur dolu bir atmosferde dinlendirici bir tatil sunmak amacıyla doğanın
-                        kucağında konumlanmıştır.
-                    </p>
-                    <p>Biz, doğayla uyum içinde olan konseptimizle, ziyaretçilerimize şehir yaşamının karmaşasından
-                        kaçış fırsatı sunuyoruz. Enba Camping, yeşillikler içinde, gölet manzaralı çadır
-                        alanlarından orman içi karavan parkına kadar geniş bir konaklama yelpazesi sunarak doğa
-                        severlerin beklentilerini karşılamayı hedefliyor.</p>
-                    <p>Enba Camping, doğa ile baş başa, huzurlu ve keyifli bir tatil için ideal bir adres. Siz de
-                        Enba Camping'i ziyaret edin, doğanın güzellikleri içinde unutulmaz anılar biriktirin!
-                        🏕️🌿🌟</p>
-                    <button class="btn btn-dark btn-lg text" type="button">Bize ulaşın</button>
+                <div class="p-5  bg-body-tertiary rounded-3 jumb my-5">
+                    <div class="container-fluid  text-center ">
+                        <h1 class="display-2 fw-bold pb-4 ">Hakkımızda</h1>
+                        <p class=" fs-4 ">Enba Camping, doğayla iç içe unutulmaz anılar biriktirmeniz için tasarlanmış
+                            benzersiz bir kamp deneyimi sunan bir destinasyondur. Misafirlerimizi şehir stresinden
+                            uzaklaştırmak, huzur dolu bir atmosferde dinlendirici bir tatil sunmak amacıyla doğanın
+                            kucağında konumlanmıştır.
+                        </p>
+                        <p>Biz, doğayla uyum içinde olan konseptimizle, ziyaretçilerimize şehir yaşamının karmaşasından
+                            kaçış fırsatı sunuyoruz. Enba Camping, yeşillikler içinde, gölet manzaralı çadır
+                            alanlarından orman içi karavan parkına kadar geniş bir konaklama yelpazesi sunarak doğa
+                            severlerin beklentilerini karşılamayı hedefliyor.</p>
+                        <p>Enba Camping, doğa ile baş başa, huzurlu ve keyifli bir tatil için ideal bir adres. Siz de
+                            Enba Camping'i ziyaret edin, doğanın güzellikleri içinde unutulmaz anılar biriktirin!
+                            🏕️🌿🌟</p>
+                        <button class="btn btn-dark btn-lg text" type="button">Bize ulaşın</button>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 
-    <!-- VİSİON -->
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-8 offset-sm-2 mt-5 mb-2">
-                <h2>Vizyonumuz</h2>
-                <p>
-                    Enba Camping'in vizyonu, doğayla uyum içinde, sürdürülebilir bir kamp deneyimi sunarak sektörde
-                    lider bir konum elde etmektir. Misafir memnuniyetini ön planda tutarak, doğayı koruyan ve
-                    misafirlerimizi doğa ile buluşturan bir tesis olmayı hedefliyoruz. Yaratıcı ve etkileyici bir
-                    konsept ile misafirlerimize kendilerini evlerinde hissettirecek bir atmosfer sağlamayı ve doğa
-                    tutkunları için vazgeçilmez bir destinasyon olmayı amaçlıyoruz. Enba Camping, her ziyaretçisinin
-                    doğa ile bütünleştiği, dinlendiği ve keyif aldığı bir mekan olarak anılmayı amaçlamaktadır.
-                </p>
-                <hr>
-                <h2>Misyonumuz</h2>
-                <p>Enba Camping olarak misyonumuz, misafirlerimize unutulmaz bir doğa deneyimi sunmak, şehir
-                    hayatının karmaşasından uzaklaştırmak ve yeniden bağlantı kurmalarını sağlamaktır. Doğanın
-                    huzurlu atmosferinde, sakin bir kaçış sunarak, konuklarımıza modern konforun ve doğal
-                    güzelliklerin bir arada olduğu bir ortamda konaklama fırsatı sunuyoruz. Temiz, düzenli ve çevre
-                    dostu bir kamp alanı ile birlikte, her misafirimizin beklentilerini aşan bir hizmet sunmayı
-                    amaçlıyoruz.</p>
-
-
-            </div>
-            <div class="col-sm-8 offset-sm-2"></div>
-        </div>
-    </div>
-    <!-- VİSİON END -->
-
-
-
-
-    <!-- PROJECT -->
-    <div class="container">
-        <div class="row my-4">
-            <div class="col-sm-12">
-                <h1 class="d-flex justify-content-center mb-4">Galeri</h1>
-                <hr>
-            </div>
-            <div class="col-sm col-6 mb-1"><img src="images/galeri/hichem-meghachou-7I-Rj_E9ihI-unsplash.jpg" alt=""
-                    class="w-100 img-thumbnail">
-            </div>
-            <div class="col-sm col-6 mb-1"><img src="images/galeri/jimmy-conover-J_XuXX9m0KM-unsplash.jpg" alt=""
-                    class="w-100 img-thumbnail">
-            </div>
-            <div class="col-sm col-6 mb-1"><img src="images/galeri/josh-campbell-UbbjVyibFuc-unsplash.jpg" alt=""
-                    class="w-100 img-thumbnail">
-            </div>
-            <div class="col-sm col-6 mb-1"><img src="images/galeri/shelby-cohron-ESNV6KmLJMg-unsplash.jpg" alt=""
-                    class="w-100 img-thumbnail">
-            </div>
-            <div class="col-sm col-6 mb-1"><img src="images/galeri/tegan-mierle-fDostElVhN8-unsplash.jpg" alt=""
-                    class="w-100 img-thumbnail">
-            </div>
-            <div class="col-sm col-6 mb-1"><img src="images/galeri/toa-heftiba-x9I-6yoXrXE-unsplash.jpg" alt=""
-                    class="w-100 img-thumbnail">
+        <!-- VİSİON -->
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-8 offset-sm-2 mt-5 mb-2">
+                    <h2>Vizyonumuz</h2>
+                    <p>
+                        Enba Camping'in vizyonu, doğayla uyum içinde, sürdürülebilir bir kamp deneyimi sunarak sektörde
+                        lider bir konum elde etmektir. Misafir memnuniyetini ön planda tutarak, doğayı koruyan ve
+                        misafirlerimizi doğa ile buluşturan bir tesis olmayı hedefliyoruz. Yaratıcı ve etkileyici bir
+                        konsept ile misafirlerimize kendilerini evlerinde hissettirecek bir atmosfer sağlamayı ve doğa
+                        tutkunları için vazgeçilmez bir destinasyon olmayı amaçlıyoruz. Enba Camping, her ziyaretçisinin
+                        doğa ile bütünleştiği, dinlendiği ve keyif aldığı bir mekan olarak anılmayı amaçlamaktadır.
+                    </p>
+                    <hr>
+                    <h2>Misyonumuz</h2>
+                    <p>Enba Camping olarak misyonumuz, misafirlerimize unutulmaz bir doğa deneyimi sunmak, şehir
+                        hayatının karmaşasından uzaklaştırmak ve yeniden bağlantı kurmalarını sağlamaktır. Doğanın
+                        huzurlu atmosferinde, sakin bir kaçış sunarak, konuklarımıza modern konforun ve doğal
+                        güzelliklerin bir arada olduğu bir ortamda konaklama fırsatı sunuyoruz. Temiz, düzenli ve çevre
+                        dostu bir kamp alanı ile birlikte, her misafirimizin beklentilerini aşan bir hizmet sunmayı
+                        amaçlıyoruz.</p>
+                </div>
             </div>
         </div>
-    </div>
+        <!-- VİSİON END -->
+
+
+
+
+        <!-- PROJECT -->
+        <div class="container">
+            <div class="row my-4">
+                <div class="col-sm-12">
+                    <h1 class="d-flex justify-content-center mb-4">Galeri</h1>
+                    <hr>
+                </div>
+                <div class="col-sm col-6 mb-1"><img src="images/galeri/hichem-meghachou-7I-Rj_E9ihI-unsplash.jpg" alt=""
+                        class="w-100 img-thumbnail">
+                </div>
+                <div class="col-sm col-6 mb-1"><img src="images/galeri/jimmy-conover-J_XuXX9m0KM-unsplash.jpg" alt=""
+                        class="w-100 img-thumbnail">
+                </div>
+                <div class="col-sm col-6 mb-1"><img src="images/galeri/josh-campbell-UbbjVyibFuc-unsplash.jpg" alt=""
+                        class="w-100 img-thumbnail">
+                </div>
+                <div class="col-sm col-6 mb-1"><img src="images/galeri/shelby-cohron-ESNV6KmLJMg-unsplash.jpg" alt=""
+                        class="w-100 img-thumbnail">
+                </div>
+                <div class="col-sm col-6 mb-1"><img src="images/galeri/tegan-mierle-fDostElVhN8-unsplash.jpg" alt=""
+                        class="w-100 img-thumbnail">
+                </div>
+                <div class="col-sm col-6 mb-1"><img src="images/galeri/toa-heftiba-x9I-6yoXrXE-unsplash.jpg" alt=""
+                        class="w-100 img-thumbnail">
+                </div>
+            </div>
+        </div>
     </div>
 
     <!-- .col-sm*8>img.w-100[src="https://picsum.photos/id/2$/100/80"] -->
@@ -229,7 +230,6 @@
                 <!-- FOOTER END -->
         </div>
 
-
+    </div>
 </body>
-
 </html>
