--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <nav class="navbar navbar-expand-lg bg-body-tertiary p-0 ">
                 <div class="container-fluid bg-dark ">
                     <a class="navbar-brand text-light mb-2" href="#">Enba Camping</a>
-                    <button class="navbar-toggler btn btn-light btn btn-outline-light bg-light m-2" type="button"
+                    <button class="navbar-toggler btn btn-light btn btn-outline-light bg-light m-2 fs-6" type="button"
                         data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                         <!-- BUTONUN EKRAN KÜÇÜLNCE ALT SATIRA GEÇMESİNİ İSTEMİYORUM. -->
@@ -46,6 +46,8 @@
             </nav>
         </div>
     </div>
+
+    
 
     <!-- NAV END -->
 
