--- a/contact.html
+++ b/contact.html
@@ -10,14 +10,17 @@
     <link rel="stylesheet" href="style/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <script src="js/contact.js" defer></script>
 </head>
 
 <body>
+   
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
 
-
+        
             <!-- NAV -->
             <div class="container-fluid">
                 <div class="row">
@@ -56,30 +59,33 @@
                     <div class="col-sm-6 ps-0">
                         <img src="images/lesly-derksen-F4fH5dAfZnE-unsplash.jpg" alt="" class=" d-block w-100 c-img ">
                     </div>
+
+                    <form action="javascript:;" onsubmit=" send( this ) " id="contactForm">
                     <div class="col-sm-6 d-flex justify-content-center align-items-center ">
                         <div class="text-center">
                             <h2 class="fw-bold display-4 ">Bize Ulaşın</h2><!-- ABOUT US YANINDAKİ BOŞLUK GİTMEDİ -->
-
                             <div class="mb-3">
                                 <label for="exampleFormControlInput1" class="form-label">Adınız</label>
-                                <input type="email" class="form-control" id="exampleFormControlInput1"
-                                    placeholder="Name">
+                                <input name="name" type="text" class="form-control" id="exampleFormControlInput1"
+                                    placeholder="Name" required>
                             </div>
                             <div class="mb-3">
-                                <label for="exampleFormControlInput1" class="form-label">Email Adres</label>
-                                <input type="email" class="form-control" id="exampleFormControlInput1"
-                                    placeholder="Email Address">
+                                <label for="exampleFormControlInput2" class="form-label">Email Adres</label>
+                                <input name="email" type="email" class="form-control" id="exampleFormControlInput2"
+                                    placeholder="Email Address" required>
                             </div>
                             <div class="mb-3">
                                 <label for="exampleFormControlTextarea1" class="form-label">Mesajınız</label>
-                                <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="Message"
-                                    rows="3"></textarea>
+                                <input name="message" type="text" class="form-control" id="exampleFormControlTextarea1" placeholder="Message"
+                                    rows="3" required minlength="10"></input>
                             </div>
                             <div class=" gap-2 d-md-block ">
-                                <button class="btn btn-light " type="button">Send</button>
+                                <input class="btn btn-light " type="submit" value="Send" id="gonder"></input>
                             </div>
                         </div>
                     </div>
+                    </form>
+
                 </div>
             </div>
             <!-- ABOUT US END -->
