feat: contact page added form action

--- a/aboutus.html
+++ b/aboutus.html
@@ -19,7 +19,7 @@
         crossorigin="anonymous"></script>
 
 
-    <!-- NAV --> <!-- SİTE SAĞINDA BİR BOŞLUK VAR GİTMİYOR -->
+    <!-- NAV --> 
     <div class="container-fluid ">
         <div class="row ">
             <nav class="navbar navbar-expand-lg bg-body-tertiary p-0 ">
@@ -28,11 +28,10 @@
                     <button class="navbar-toggler btn btn-light btn btn-outline-light bg-light m-2" type="button"
                         data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                        <!-- BUTONUN EKRAN KÜÇÜLNCE ALT SATIRA GEÇMESİNİ İSTEMİYORUM. -->
                         <span class="navbar-toggler-icon "></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                        <div class="navbar-nav ms-auto"><!-- ms-auto ile navbar kısmı sağa gitti ama nasıl? -->
+                        <div class="navbar-nav ms-auto">
                             <a class="nav-link  text-light text-center" aria-current="page" href="index.html">Home</a>
                             <a class="nav-link active text-light text-center" href="aboutus.html">About us</a>
                             <a class="nav-link  text-light text-center" href="contact.html"
@@ -139,7 +138,7 @@
         </div>
     </div>
 
-    <!-- .col-sm*8>img.w-100[src="https://picsum.photos/id/2$/100/80"] -->
+
     </div>
     <!-- PROJECT END -->
 
@@ -229,7 +228,6 @@
                 </div>
                 <!-- FOOTER END -->
         </div>
-
     </div>
 </body>
 </html>
