--- a/index.html
+++ b/index.html
@@ -30,11 +30,10 @@
                     <button class="navbar-toggler btn btn-light btn btn-outline-light bg-light m-2 fs-6" type="button"
                         data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                        <!-- BUTONUN EKRAN KÜÇÜLNCE ALT SATIRA GEÇMESİNİ İSTEMİYORUM. -->
                         <span class="navbar-toggler-icon "></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                        <div class="navbar-nav ms-auto"><!-- ms-auto ile navbar kısmı sağa gitti ama nasıl? -->
+                        <div class="navbar-nav ms-auto">
                             <a class="nav-link active text-light text-center" aria-current="page"
                                 href="index.html">Home</a>
                             <a class="nav-link text-light text-center" href="aboutus.html">About us</a>
@@ -78,7 +77,6 @@
                             <div class="carousel-item c-item">
                                 <img src="images/mattias-helge-CAk3Rl75CD8-unsplash.jpg" class="d-block w-100 c-img"
                                     alt="slide3">
-                                <!-- GÖRSELLERİN BOYUTLARINI AYARLAYAMADIM! -->
                             </div>
                         </div>
                     </div>
@@ -100,7 +98,7 @@
 
     <!-- CAROUSEL END -->
 
-    <!-- JUMB --> <!-- SİTE ORTASINDA BULUNAN DİKKAT ÇEKİCİ METİN -->
+    <!-- JUMB -->
     <div class="container-fluid">
         <div class="row bg-dark border-top border-bottom">
             <div class="col-sm-8 offset-sm-2">
@@ -137,7 +135,7 @@
             </div>
             <div class="col-sm-6 d-flex justify-content-center align-items-center ">
                 <div class="text-center">
-                    <h2 class="fw-bold display-4 mb-3 ">Neden Enba ?</h2><!-- ABOUT US YANINDAKİ BOŞLUK GİTMEDİ -->
+                    <h2 class="fw-bold display-4 mb-3 ">Neden Enba ?</h2>
                     <div class="mb-5">
                         <ul>
                             <h5>Doğa ile Bütünleşik Konsept</h5>
@@ -259,7 +257,7 @@
         </div>
     </div>
 
-    <!-- .col-sm*8>img.w-100[src="https://picsum.photos/id/2$/100/80"] -->
+
 
     <!-- PROJECT END -->
 
